# iti-simple-rag

./: .gitignore  README.md  fastapi_app.py  langserve_app.py  pyproject.toml  rag.py  requirements.txt
